--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <span class="timertext" id="break">:</span>
             <span class="timertext" id="seconds"></span>
         </div>
+        <div id="cords">
+            <span class="cordstext">XYZ -</span>
+            <span class="cordstext" id="x"></span>
+            <span class="cordstext" id="break">,</span>
+            <span class="cordstext" id="y"></span>
+            <span class="cordstext" id="break">,</span>
+            <span class="cordstext" id="z"></span>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.min.js"></script>
         <script type="application/x-glsl" id="sky-vertex">
             varying vec2 vUV;
